<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/board"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.GameActivity">

    <ImageView
        android:id="@+id/boardBg"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/board"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_boardsvg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextSwitcher
        android:id="@+id/question"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#80000000"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toTopOf="@+id/answers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBarValues">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:textSize="32sp"
            android:padding="8dp"
            android:fontFamily="sans-serif-light" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:textSize="32sp"
            android:padding="8dp"
            android:fontFamily="sans-serif-light" />
    </TextSwitcher>

    <ImageView
        android:id="@+id/bonus"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:src="@drawable/bonus"
        android:translationY="16dp"
        app:layout_constraintBottom_toTopOf="@+id/question"
        app:layout_constraintEnd_toEndOf="@+id/boardBg"
        android:contentDescription="@string/bonus" />

    <LinearLayout
        android:id="@+id/answers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="96dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/answer1"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/answer2"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/answer3"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/topBarText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/life"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:shadowColor="@color/colorPrimaryDark"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:text="@string/life"
            android:textColor="@color/colorWhite"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:shadowColor="@color/colorPrimaryDark"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:text="@string/score"
            android:textColor="@color/colorWhite"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:shadowColor="@color/colorPrimaryDark"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:text="@string/time"
            android:textColor="@color/colorWhite"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/topBarValues"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBarText">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:paddingTop="3dp">

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="false"
                android:numStars="3"
                android:progressDrawable="@drawable/heart"
                android:rating="3" />
        </LinearLayout>

        <TextView
            android:id="@+id/scoreValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-light"
            android:gravity="center_horizontal"
            android:shadowColor="@color/colorPrimaryDark"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:textColor="@color/colorWhite"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/timeValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-light"
            android:gravity="center_horizontal"
            android:shadowColor="@color/colorPrimaryDark"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:textColor="@color/colorWhite"
            android:textSize="24sp" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/feedback"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#70000000"
        android:translationZ="5dp"
        android:visibility="invisible"
        tools:layout_editor_absoluteY="64dp">

        <TextView
            android:id="@+id/feedbackTextWrong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wrong_answer"
            android:textColor="@color/colorWhite"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageWrong"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/wrong"
            android:tint="@color/colorDanger"
            app:layout_constraintBottom_toTopOf="@+id/feedbackTextWrong"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/close" />

        <TextView
            android:id="@+id/feedbackTextCorrect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correct_answer"
            android:textColor="@color/colorWhite"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageCorrect"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/correct"
            android:tint="@color/colorSuccess"
            app:layout_constraintBottom_toTopOf="@+id/feedbackTextWrong"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/check" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>